syntax = "proto3";
package varso_analytics;

option go_package = "client/models";

message Post {
	string uuid = 1;
	string title = 2;
	string cover_image_url = 3;
	int64 total_votes = 4;
	int64 comments_amount = 6;
}

message Album {
	string name = 1;
	repeated Artist artists = 2;
}

message Artist {
	string name = 1;
	string spotify_link = 2;
}